# hello-world-github-action

./: README.md  action.yml  openapi.json  package-lock.json  package.json  pyproject.toml  release.config.js
.github/workflows/: release.yml  test-action.yml  test.yml
scripts/: generate-openapi.py
src/: index.js  main.py
