[tool.poetry]
name = "hello-world-github-action"
version = "0.1.0"
description = ""
authors = ["Zarif Aziz <zarif.aziz@noemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
